2010-02-04  Zoltan Varga  <vargaz@gmail.com>

	* TypeMirror.cs (EnumUnderlyingType): New property.

	* EnumMirror.cs: Use it.

	* VirtualMachine.cs (CreateEnumMirror): New method to create an EnumMirror.

	* AppDomainMirror.cs (GetCorrespondingType): New method to return a TypeMirror
	corresponding to a primitive type.

	* TypeMirror.cs (IsEnum): Implement.

	* EnumMirror.cs (.ctor): New internal constructor called from CreateEnumMirror
	which does lots of error checking.

2010-01-28  Zoltan Varga  <vargaz@gmail.com>

	* AssemblyUnloadEvent: New file.

	* VirtualMachine.cs Connection.cs: Add support for assembly unload events.

2009-12-05  Lluis Sanchez  <lluis@novell.com>

	* StructMirror.cs: Fix field indexer for structs with static fields.
	* VirtualMachineManager.cs: Added an option to LaunchOptions which
	allows providing a custom method for launching the process. This
	allows launching mono in a wrapper process.

2009-12-03  Zoltan Varga  <vargaz@gmail.com>

	* StructMirror.cs (this): Ignore static fields.

2009-12-02  Geoff Norton  <gnorton@novell.com>

	* VirtualMachineManager.cs: We might get a SocketException (interrupted)
	here, so lets just handle all Exceptions to our Accept pattern the same
	way

2009-12-01  Zoltan Varga  <vargaz@gmail.com>

	* VirtualMachine.cs (ErrorHandler): Handle NOT_SUSPENDED error code too.

2009-11-24  Zoltan Varga  <vargaz@gmail.com>

	* ObjectMirror.cs TypeMirror.cs StructMirror.cs: Make the BeginInvokeMethod
	which takes a 'vm' argument obsolete, it was added by mistake, add a version
	without that argument instead.

2009-11-19  Zoltan Varga  <vargaz@gmail.com>

	* AssemblyMirror.cs: Add a GetName () method.

2009-11-17  Zoltan Varga  <vargaz@gmail.com>

	* Connection.cs ObjectMirror.cs: Implement invokes in a real asynchronous way,
	without waiting.

2009-11-14  Zoltan Varga  <vargaz@gmail.com>

	* InvokeOptions.cs: Add SingleThreaded option, not yet works.
